update post, fix post picture heights, fix typos

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,16 @@ title: Home
 ---
 
 <article>
-    <div class="featured-cover" style="background-image:url('')">
+    <div class="featured-cover">
       <img src="/assets/logo/workshop_transparent.png" style="width: 500xpx"/>
       <h1>{{ site.data.settings.cover_title }}</h1>
       <p>{{ site.data.settings.cover_description }}</p>
+    </div>
+</article>
+
+<article>
+    <div class="featured-cover" style="margin-bottom: 10px;">
+      <h1>What's the latest</h1>
     </div>
 </article>
 
