--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ title: Home
 
 <article>
     <div class="featured-cover">
-      <img src="/assets/logo/workshop_transparent.png" style="width: 500xpx"/>
+      <img src="/assets/logo/workshop_transparent.png" style="width: 80vw;"/>
       <h1>{{ site.data.settings.cover_title }}</h1>
       <p>{{ site.data.settings.cover_description }}</p>
     </div>
