--- a/assets/css/_sass/_-sections-dir.scss
+++ b/assets/css/_sass/_-sections-dir.scss
@@ -1,5 +1,6 @@
 // Importing Sass/SCSS partials from `sass_dir` (defaults to `_sass`)
 @import "base",
+        "buttons",
         "default",
         "home",
         "misc",
