--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -8,7 +8,7 @@
   margin-right: auto;
 }
 .container a {
-  text-decoration: underline;
+  //text-decoration: underline;
 }
 .posts-wrapper {
   padding-top: $header-thickness+10px;
