--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,4 +22,23 @@ $phone-width: 480px;
 
 $header-thickness: 56px;
 
+/*
+  btn variables
+*/
+
+$grey-dk-000: #959396;
+$grey-dk-100: #5c5962;
+$grey-dk-200: #44434d;
+$grey-dk-250: #302d36;
+$grey-dk-300: #27262b;
+
+$grey-lt-000: #f5f6fa;
+$grey-lt-100: #eeebee;
+$grey-lt-200: #ecebed;
+$grey-lt-300: #e6e1e8;
+
+$link-color: #d63e36;
+$base-button-color: #fdb81a;
+$border-radius: 4px;
+
 @import "_sass/-sections-dir";
