--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,8 +1,7 @@
 <!-- Begin Team List-->
 <!-- <section id="team" class="team">
     <div class="content-wrapper"> -->
-        <div>
-            <h3 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">Meet the team</h3>
+        <div id="shuffle-this">
             {% for teamMember in site.data.team %} {% if teamMember.team != null %}
             <div class="effect-wrapper appear-animation">
                 <div class="zoe-effect" data-toggle="modal" data-target="#speakerDetail-{{ teamMember.id }}">
@@ -30,3 +29,10 @@
     <!-- </div>
 </section> -->
 <!-- End Team List -->
+
+<script type="text/javascript">
+var myList = document.querySelector('#shuffle-this');
+for (var i = myList.children.length; i >= 0; i--) {
+    myList.appendChild(myList.children[Math.random() * i | 0]);
+}
+</script>
