--- a/assets/css/_sass/_buttons.scss
+++ b/assets/css/_sass/_buttons.scss
@@ -13,9 +13,9 @@
   margin: 0;
   font-family: inherit;
   font-size: inherit;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.5;
-  color: $link-color;
+  color: #ffffff !important;
   text-decoration: none;
   vertical-align: baseline;
   cursor: pointer;
@@ -26,6 +26,7 @@
   appearance: none;
 
   &:focus {
+    color: #ffffff !important;
     text-decoration: none;
     outline: none;
     box-shadow: 0 0 0 3px rgba(blue, 0.25);
@@ -33,33 +34,36 @@
 
   &:focus:hover,
   &.selected:focus {
+    color: #ffffff !important;
     box-shadow: 0 0 0 3px rgba(blue, 0.25);
   }
 
   &:hover,
   &.zeroclipboard-is-hover {
-    color: darken($link-color, 5%);
-    background-color: lighten($base-button-color, 10%);
+    color: #ffffff !important;
+    background-color: darken($base-button-color, 8%);
   }
 
   &:hover,
   &:active,
   &.zeroclipboard-is-hover,
   &.zeroclipboard-is-active {
+    color: #ffffff !important;
     text-decoration: none;
-    background-color: darken($base-button-color, 5%);
-    background-color: lighten($base-button-color, 10%);
+    background-color: darken($base-button-color, 8%);
   }
 
   &:active,
   &.selected,
   &.zeroclipboard-is-active {
-    background-color: darken($base-button-color, 3%);
+    color: #ffffff !important;
+    background-color: darken($base-button-color, 10%);
     background-image: none;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
   }
 
   &.selected:hover {
+    color: #ffffff !important;
     background-color: darken(#dcdcdc, 5%);
   }
 
